--- a/Opdracht 1/ML_semester3_final.html
+++ b/Opdracht 1/ML_semester3_final.html
@@ -16818,7 +16818,7 @@ class="
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>Smote of Synthetic Minority Oversampling Technique is een vorm van oversamplen, dit werkt door synthetische data aan te maken op basis van de al bestaande data. Het probeert zo een unbalanced data set weer balanced te maken.</p>
 <p>Het kiest een willekeurig voorbeeld uit de minderheids klasse en zoekt dan binnen een bepaalde K waarde naar de 'nearest neighbours'. Het kiest vervolgens een willekeurige uit deze selectie en plaatst een data punt hiertussen. Zo probeert het zo werkelijk mogelijke data aan te maken.</p>
-<p>Brownlee, J. (2021, March 16). SMOTE for Imbalanced Classification with Python. MachineLearningMastery.com. <a href="https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/">https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/</a></p>
+<p><a href="https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/">https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/</a></p>
 
 </div>
 </div>
@@ -16864,7 +16864,7 @@ class="
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>ADASYN of Adaptive Synthetic Sampling, is een oversampling techniek waar synthetische data wordt aangemaakt op basis van al bestaande data. ADASYN doet dit met behulp van het berekenen van dichtheidsverdeling van de minderheids klassen en genereerd dan data op basis hiervan.</p>
-<p>What is Adaptive Synthetic Sampling (ADASYN). (n.d.). <a href="https://www.activeloop.ai/resources/glossary/adaptive-synthetic-sampling-adasyn/">https://www.activeloop.ai/resources/glossary/adaptive-synthetic-sampling-adasyn/</a></p>
+<p><a href="https://www.activeloop.ai/resources/glossary/adaptive-synthetic-sampling-adasyn/">https://www.activeloop.ai/resources/glossary/adaptive-synthetic-sampling-adasyn/</a></p>
 
 </div>
 </div>
@@ -16911,7 +16911,7 @@ class="
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>IHT is een undersampling techniek dat samples met een lage kans verwijderd uit de dataset. Het gebruikt dus een model om de probablity de te voorspellen dat een sample voorspeld wordt met een bepaalde klasse, vervolgens verwijderd IHT de uit de meerderheids klasse de moeilijkst te voorspellen samples. Hierdoor zou het model zowel beter moeten generaliseren en accurater zijn.</p>
 <p>Dit werkt beter voor SVMs</p>
-<p>Sisters, L. (2022, March 30). Instance hardness threshold: an undersampling method to tackle imbalanced classification problems. Medium. <a href="https://towardsdatascience.com/instance-hardness-threshold-an-undersampling-method-to-tackle-imbalanced-classification-problems-6d80f91f0581">https://towardsdatascience.com/instance-hardness-threshold-an-undersampling-method-to-tackle-imbalanced-classification-problems-6d80f91f0581</a></p>
+<p><a href="https://towardsdatascience.com/instance-hardness-threshold-an-undersampling-method-to-tackle-imbalanced-classification-problems-6d80f91f0581">https://towardsdatascience.com/instance-hardness-threshold-an-undersampling-method-to-tackle-imbalanced-classification-problems-6d80f91f0581</a></p>
 
 </div>
 </div>
@@ -17126,7 +17126,7 @@ Name: count, dtype: int64
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>Standaardiseren van de data zorgt ervoor dat de schaal overal gelijk is. Dit zorgt ervoor dat een kolom met een andere schaal niet veel te veel of veel te weinig invloed heeft op het model. Dit is vooral belangrijk voor afstandgebasseerde algoritmes zoals k-NN en SVM die we hier gebruiken. Voor Tree gebaseerde modellen of categorische variabelen is dit vaak niet nodig.</p>
-<p>Jaadi, Z. (2023, August 4). When and why to standardize your data. Built In. <a href="https://builtin.com/data-science/when-and-why-standardize-your-data">https://builtin.com/data-science/when-and-why-standardize-your-data</a></p>
+<p><a href="https://builtin.com/data-science/when-and-why-standardize-your-data">https://builtin.com/data-science/when-and-why-standardize-your-data</a></p>
 
 </div>
 </div>
